# business_card

./: .gitignore  README.md  pyproject.toml
BusinessCardScanner/: AppDelegate.swift  BusinessCardScannerApp.swift  Info.plist  Secrets.xcconfig.example  project.yml
BusinessCardScanner/BusinessCardScanner.xcodeproj/: project.pbxproj
BusinessCardScanner/BusinessCardScanner.xcodeproj/xcshareddata/xcschemes/: BusinessCardScanner.xcscheme
BusinessCardScanner/Extensions/: BusinessCard+Contact.swift
BusinessCardScanner/Models/: BusinessCard.swift  OCRResult.swift
BusinessCardScanner/Services/: BusinessCardParser.swift  CardExtractor.swift  OCREngine.swift  OllamaExtractor.swift  VisionOCREngine.swift
BusinessCardScanner/Views/: CameraView.swift  CardDetailView.swift  CardListView.swift  CardPagerView.swift  ScanView.swift  SettingsView.swift
BusinessCardScanner/Views/Components/: TagComponents.swift
src/business_card/: __init__.py  batch.py  main.py  parser.py
src/business_card/extractor/: __init__.py  base.py  ollama.py
src/business_card/models/: __init__.py  business_card.py
src/business_card/ocr/: __init__.py  base.py  paddle_ocr.py
src/business_card/preprocessing/: __init__.py  card_detector.py
tests/: __init__.py  test_batch.py  test_parser.py  test_preprocessing.py
