[project]
name = "business-card"
version = "0.1.0"
description = "Business card image parser with OCR and LLM extraction"
readme = "README.md"
authors = [
    { name = "mj.li", email = "mj.li@algoltek.com" }
]
requires-python = ">=3.10"
dependencies = [
    "paddleocr>=3.0.0",
    "paddlepaddle>=3.2.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
bcparser = "business_card.main:app"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
